Moved some files for better performance

--- a/login-page/login.html
+++ b/login-page/login.html
@@ -396,7 +396,7 @@
         contentType: "application/json; charset=utf-8",
         dataType: "json",
         success: function (data) {
-          window.location.href= 'file:///SistemaCorporativo.html';
+          window.location.href= '/home/mateus/primeiro_site/Primeiro_site/login-page/Sistemacorporativo.html';
         },
         error: function (jqXHR, textStatus, errorThrown) {
           console.error('Login error:', errorThrown);
