Changed file locations
There was a bug where once you clicked the "continue" button the
page that you should be sent to was not working. Now it is.

--- a/login-page/login.html
+++ b/login-page/login.html
@@ -396,10 +396,9 @@
         contentType: "application/json; charset=utf-8",
         dataType: "json",
         success: function (data) {
-          window.location.href= '/home/mateus/primeiro_site/Primeiro_site/login-page/Sistemacorporativo.html';
+          window.location.href = 'file:///C:/Users/mastr/OneDrive/Documentos/GitHub/Primeiro_site/login-page/Sistemacorporativo.html'
         },
         error: function (jqXHR, textStatus, errorThrown) {
-          console.error('Login error:', errorThrown);
           alert('Login failed. Please check your email and password.');
         }
       });
