--- a/login-page/signup.html
+++ b/login-page/signup.html
@@ -369,8 +369,7 @@ body {
               contentType: "application/json; charset=utf-8",
               dataType: "json",
               success: function (msg) {
-                  alert('Sucesso!');
-                  location.reload();
+                window.location.href = 'file:///C:/Users/mastr/OneDrive/Documentos/GitHub/Primeiro_site/login-page/login.html'
               },
               error: function (msg) {
                   alert('erro_validacao');
