Altered BadRequest message on signup

--- a/login-page/signup.html
+++ b/login-page/signup.html
@@ -372,7 +372,7 @@ body {
                 window.location.href = 'file:///C:/Users/mastr/OneDrive/Documentos/GitHub/Primeiro_site/login-page/login.html'
               },
               error: function (msg) {
-                  alert('erro_validacao');
+                  alert('Por favor, digite uma senha ou email válidos');
               }
 
           });
